--- a/HoL/hol_1/holfilter/holfilter.rc
+++ b/HoL/hol_1/holfilter/holfilter.rc
@@ -4,7 +4,7 @@
 
 #define VER_FILETYPE    VFT_DRV
 #define VER_FILESUBTYPE VFT2_DRV_SYSTEM
-#define VER_FILEDESCRIPTION_STR     "filter_1 Filter Driver"
-#define VER_INTERNALNAME_STR        "filter_1.sys"
+#define VER_FILEDESCRIPTION_STR     "holfilter Filter Driver"
+#define VER_INTERNALNAME_STR        "holfilter.sys"
 
 #include "common.ver"
