--- a/HoL/hol_1/holfilter/holfilter.vcxproj
+++ b/HoL/hol_1/holfilter/holfilter.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="holfilter.rc" />
-    <ClCompile Include="holfilter.c" />
+    <ClCompile Include="holfilter.cpp" />
     <Inf Include="holfilter.inf" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
