--- a/HoL/hol_3/holfilter3/holfilter3.vcxproj.filters
+++ b/HoL/hol_3/holfilter3/holfilter3.vcxproj.filters
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <ClCompile Include="holfilter3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="dbg_msg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="holfilter2.cpp">
+    <ClCompile Include="proc_callback.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -12,10 +15,13 @@
     <ClInclude Include="dbg_msg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="holfilter2.h">
+    <ClInclude Include="holfilter3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="pch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="proc_callback.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
