Hands on lab, cpp 컴파일러 사용하기

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,36 @@ paket-files/
 # cert
 *.pfx
 /Output-Build.txt
+/HoL/out/x64_debug/ObCallbackTest.cer
+/HoL/out/x64_debug/ObCallbackTest.sys
+/HoL/out/x64_debug/ObCallbackTest/ObCallbackTest.sys
+/HoL/out/x64_debug/ObCallbackTestCtrl.exe
+/HoL/out/x64_debug/boost_date_time-vc141-mt-gd-x64-1_67.dll
+/HoL/out/x64_debug/boost_system-vc141-mt-gd-x64-1_67.dll
+/HoL/out/x64_debug/boost_thread-vc141-mt-gd-x64-1_67.dll
+/HoL/out/x64_debug/control.exe
+/HoL/out/x64_debug/control2.exe
+/HoL/out/x64_debug/control3.exe
+/HoL/out/x64_debug/holfilter.cer
+/HoL/out/x64_debug/holfilter.inf
+/HoL/out/x64_debug/holfilter/holfilter.cat
+/HoL/out/x64_debug/holfilter/holfilter.inf
+/HoL/out/x64_debug/holfilter/holfilter.sys
+/HoL/out/x64_debug/holfilter2.cer
+/HoL/out/x64_debug/holfilter2.sys
+/HoL/out/x64_debug/holfilter2/holfilter.cat
+/HoL/out/x64_debug/holfilter2/holfilter.inf
+/HoL/out/x64_debug/holfilter2/holfilter2.sys
+/HoL/out/x64_debug/holfilter3.cer
+/HoL/out/x64_debug/holfilter3.sys
+/HoL/out/x64_debug/holfilter3/holfilter.cat
+/HoL/out/x64_debug/holfilter3/holfilter.inf
+/HoL/out/x64_debug/holfilter3/holfilter3.sys
+/HoL/out/x64_debug/regctrl.exe
+/HoL/out/x64_debug/regfltr.cer
+/HoL/out/x64_debug/regfltr.sys
+/HoL/out/x64_debug/regfltr/regfltr.sys
+/HoL/out/x64_debug/scanner.cer
+/HoL/out/x64_debug/scanner.sys
+/HoL/out/x64_debug/scanner/scanner.sys
+/HoL/out/x64_debug/scanuser.exe
