--- a/HoL/hol_1/holfilter/holfilter.vcxproj.filters
+++ b/HoL/hol_1/holfilter/holfilter.vcxproj.filters
@@ -29,8 +29,16 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="holfilter.c">
+    <ClCompile Include="holfilter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="dbg_msg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="dbg_msg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
